[gd_scene load_steps=4 format=3 uid="uid://b61atqrnwgrdt"]

[ext_resource type="Script" path="res://my_xr_tools/xr_coordinate_waldo/xr_coordiante_waldo.gd" id="1_5oqq2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0jpt1"]
albedo_color = Color(1, 1, 0.341176, 1)

[sub_resource type="BoxMesh" id="BoxMesh_lk2ug"]
material = SubResource("StandardMaterial3D_0jpt1")
size = Vector3(0.1, 0.1, 0.1)

[node name="XRCoordianteWaldo" type="Node3D"]
script = ExtResource("1_5oqq2")

[node name="LeftControllerPosition" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="LeftControllerPosition"]
mesh = SubResource("BoxMesh_lk2ug")

[node name="RightControllerPosition" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightControllerPosition"]
mesh = SubResource("BoxMesh_lk2ug")

[node name="CameraPosition" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="CameraPosition"]
mesh = SubResource("BoxMesh_lk2ug")
